--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -1,226 +1,226 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
-  <h id="napojovy_listek" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/beverages">Nápojový lístek</h>
-  <desc>Naše domácí limonády z čerstvého ovoce Vás osvěží za horkého dne a náš připravovaný pečený čaj zahřeje v sychravém počasí. Pivařům čepujeme Staropramen s nabídkou piv z malých pivovarů a nezaostáváme v širší nabídce kvalitních rumů.</desc>
+  <h data-id="beverages" id="napojovy_listek" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/beverages">Nápojový lístek</h>
+  <desc>Naše domácí limonády z&#160;čerstvého ovoce Vás osvěží za horkého dne a&#160;náš připravovaný pečený čaj zahřeje v&#160;sychravém počasí. Pivařům čepujeme Staropramen s&#160;nabídkou piv z&#160;malých pivovarů a&#160;nezaostáváme v&#160;širší nabídce kvalitních rumů.</desc>
   <section class="contenttoc">
-    <h id="alkoholicke" title="Alkoholické nápoje, pivo…">Alkoholické nápoje, pivo</h>
+    <h data-id="alcoholic" id="alkoholicke" title="Alkoholické nápoje, pivo…">Alkoholické nápoje, pivo</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
-      <dt>Staropramen Extra chmelená 12 točené <span>0,4 l</span></dt>
-      <dd class="price">40 Kč</dd>
-      <dt>Speciál z minipivovaru točené <span>0,3 l a 0,5 l</span></dt>
+      <dt>Staropramen Extra chmelená 12&#160;točené <span>0,4&#160;l</span></dt>
+      <dd class="price">40&#160;Kč</dd>
+      <dt>Speciál z&#160;minipivovaru točené <span>0,3&#160;l a&#160;0,5&#160;l</span></dt>
       <dd>Dle <a href="#pivo">aktuální nabídky</a></dd>
-      <dt>Staropramen nealko točené <span>0,3 l</span></dt>
-      <dd class="price">30 Kč</dd>
-      <dt>Staropramen nealko točené <span>0,5 l</span></dt>
-      <dd class="price">40 Kč</dd>
-      <dt>Stella Artois nealko (sklo) <span>0,33 l</span></dt>
-      <dd class="price">33 Kč</dd>
-      <dt>Guinness (plech) <span>0,44 l</span></dt>
-      <dd class="price">48 Kč</dd>
+      <dt>Staropramen nealko točené <span>0,3&#160;l</span></dt>
+      <dd class="price">30&#160;Kč</dd>
+      <dt>Staropramen nealko točené <span>0,5&#160;l</span></dt>
+      <dd class="price">40&#160;Kč</dd>
+      <dt>Stella Artois nealko (sklo) <span>0,33&#160;l</span></dt>
+      <dd class="price">33&#160;Kč</dd>
+      <dt>Guinness (plech) <span>0,44&#160;l</span></dt>
+      <dd class="price">48&#160;Kč</dd>
       <dd>Irské černé pivo</dd>
-      <dt>Hoegaarden (sklo) <span>0,33 l</span></dt>
-      <dd class="price">40 Kč</dd>
+      <dt>Hoegaarden (sklo) <span>0,33&#160;l</span></dt>
+      <dd class="price">40&#160;Kč</dd>
       <dd>Pšeničné belgické pivo</dd>
-      <dt>Pilsner Urquell (sklo) <span>0,33 l</span></dt>
-      <dd class="price">35 Kč</dd>
+      <dt>Pilsner Urquell (sklo) <span>0,33&#160;l</span></dt>
+      <dd class="price">35&#160;Kč</dd>
     </dl>
 
-    <h id="michane" class="break" title="Míchané nápoje a aperitivy a sekty…">Míchané nápoje a aperitivy</h>
+    <h data-id="mixed" id="michane" class="break" title="Míchané nápoje a&#160;aperitivy a&#160;sekty…">Míchané nápoje a&#160;aperitivy</h>
     <desc>n/a</desc>
-<!--     <desc>U obsluhy je možné si vyžádat lístek míchaních nápojů, na kterém jsou jednotlivé
+<!--     <desc>U&#160;obsluhy je možné si vyžádat lístek míchaních nápojů, na kterém jsou jednotlivé
 nápoje detailněji popsány včetně složení.</desc> -->
     <dl class="meal meal-oneline">
       <dt>Crodino Spritz</dt>
-      <dd class="price">65 Kč</dd>
+      <dd class="price">65&#160;Kč</dd>
       <dd>Crodino, soda, plátek pomeranče, led</dd>
       <dt>Aperol Spritz</dt>
-      <dd class="price">90 Kč</dd>
+      <dd class="price">90&#160;Kč</dd>
       <dd>Aperol, prosecco <a var="definition-doc">DOC</a>, soda, plátek pomeranče, led</dd>
       <dt>Tanqueray &amp; East Imperial Tonic</dt>
-      <dd class="price">90 Kč</dd>
+      <dd class="price">90&#160;Kč</dd>
       <dd>Londýnský gin, tonic East Imperial, plátek limetky, led</dd>
       <dt>Moscow Mule</dt>
-      <dd class="price">90 Kč</dd>
+      <dd class="price">90&#160;Kč</dd>
       <dd>Vodka Russian Standard, zázvorové pivo East Imperial, limetka, led</dd>
       <dt>Cuba Libre</dt>
-      <dd class="price">90 Kč</dd>
-      <dd>Světlý rum Havana 3 <a var="definition-yo">YO</a>, Coca Cola, limetka, led</dd>
+      <dd class="price">90&#160;Kč</dd>
+      <dd>Světlý rum Havana 3&#160;<a var="definition-yo">YO</a>, Coca Cola, limetka, led</dd>
       <dt>Mojito</dt>
-      <dd class="price">90 Kč</dd>
-      <dd>Světlý rum Havana 3 <a var="definition-yo">YO</a>, soda, třtinový cukr, limetka, máta, led</dd>
-      <dt>Cinzano Bianco <span>0,1 l</span></dt>
-      <dd class="price">45 Kč</dd>
-      <dt>Campari <span>0,05 l</span></dt>
-      <dd class="price">50 Kč</dd>
-      <dt>Louis Perdrier Demi Sec/Brut <span>0,75 l</span></dt>
-      <dd class="price">290 Kč</dd>
+      <dd class="price">90&#160;Kč</dd>
+      <dd>Světlý rum Havana 3&#160;<a var="definition-yo">YO</a>, soda, třtinový cukr, limetka, máta, led</dd>
+      <dt>Cinzano Bianco <span>0,1&#160;l</span></dt>
+      <dd class="price">45&#160;Kč</dd>
+      <dt>Campari <span>0,05&#160;l</span></dt>
+      <dd class="price">50&#160;Kč</dd>
+      <dt>Louis Perdrier Demi Sec/Brut <span>0,75&#160;l</span></dt>
+      <dd class="price">290&#160;Kč</dd>
       <dd>Oblast Francie</dd>
-      <dt>Gio Cuvée <span>0,1 l</span></dt>
-      <dd class="price">60 Kč</dd>      
+      <dt>Gio Cuvée <span>0,1&#160;l</span></dt>
+      <dd class="price">60&#160;Kč</dd>      
       <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a> Extra dry</dd>
-      <dt>Gio Cuvée <span>0,75 l</span></dt>
-      <dd class="price">290 Kč</dd>      
+      <dt>Gio Cuvée <span>0,75&#160;l</span></dt>
+      <dd class="price">290&#160;Kč</dd>      
       <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a> Extra dry</dd>
-      <dt>Millesimato Cuvée <span>0,75 l</span></dt>
-      <dd class="price">370 Kč</dd>      
+      <dt>Millesimato Cuvée <span>0,75&#160;l</span></dt>
+      <dd class="price">370&#160;Kč</dd>      
       <dd>Prosecco od výrobce Conca d´ORO <a var="definition-doc">DOC</a> Extra dry</dd>
-      <dt>Conegliano Valdobbiadene Superiore <span>0,75 l</span></dt>
-      <dd class="price">550 Kč</dd>      
+      <dt>Conegliano Valdobbiadene Superiore <span>0,75&#160;l</span></dt>
+      <dd class="price">550&#160;Kč</dd>      
       <dd>Prosecco od výrobce Conca d´ORO <a var="definition-docg">DOCG</a> Brut</dd>
-      <dt>Conegliano Valdobbiadene Superiore <span>0,75 l</span></dt>
-      <dd class="price">550 Kč</dd>
+      <dt>Conegliano Valdobbiadene Superiore <span>0,75&#160;l</span></dt>
+      <dd class="price">550&#160;Kč</dd>
       <dd>Prosecco od výrobce Vedova <a var="definition-docg">DOCG</a> Brut</dd>
     </dl>
 
-    <h id="nealkoholicke" class="break" title="Nealkoholické nápoje…">Nealkoholické nápoje</h>
+    <h data-id="soft_drinks" id="nealkoholicke" class="break" title="Nealkoholické nápoje…">Nealkoholické nápoje</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
       <dt>Domácí citronáda</dt>
-      <dd class="price">60 Kč</dd>
+      <dd class="price">60&#160;Kč</dd>
       <dt>Domácí malinová limonáda</dt>
-      <dd class="price">65 Kč</dd>
-      <dt>Coca-Cola <span>0,33 l</span></dt>
-      <dd class="price">40 Kč</dd>
+      <dd class="price">65&#160;Kč</dd>
+      <dt>Coca-Cola <span>0,33&#160;l</span></dt>
+      <dd class="price">40&#160;Kč</dd>
       <dd>(original, zero lemon, zero)</dd>
-      <dt>Fanta pomeranč <span>0,33 l</span></dt>
-      <dd class="price">40 Kč</dd>
-      <dt>Sprite <span>0,33 l</span></dt>
-      <dd class="price">40 Kč</dd>
-      <dt>Kinley <span>0,25 l</span></dt>
-      <dd class="price">40 Kč</dd>
+      <dt>Fanta pomeranč <span>0,33&#160;l</span></dt>
+      <dd class="price">40&#160;Kč</dd>
+      <dt>Sprite <span>0,33&#160;l</span></dt>
+      <dd class="price">40&#160;Kč</dd>
+      <dt>Kinley <span>0,25&#160;l</span></dt>
+      <dd class="price">40&#160;Kč</dd>
       <dd>(tonic water, ginger, rose)</dd>
-      <dt>Cappy <span>0,25 l</span></dt>
-      <dd class="price">40 Kč</dd>
+      <dt>Cappy <span>0,25&#160;l</span></dt>
+      <dd class="price">40&#160;Kč</dd>
       <dd>(pomeranč 100%, jahoda, multivitamín, černý rybíz, hruška, jablko)</dd>
-      <dt>Bonaqua <span>0,25 l</span></dt>
-      <dd class="price">30 Kč</dd>
+      <dt>Bonaqua <span>0,25&#160;l</span></dt>
+      <dd class="price">30&#160;Kč</dd>
       <dd>Perlivá, jemně perlivá, neperlivá</dd>
-<!--       <dt>Red bull <span>0,25 l</span></dt> -->
-<!--       <dd class="price">60 Kč</dd> -->
-      <dt>Romerquelle <span>0,33 l</span></dt>
-      <dd class="price">35 Kč</dd>
+<!--       <dt>Red bull <span>0,25&#160;l</span></dt> -->
+<!--       <dd class="price">60&#160;Kč</dd> -->
+      <dt>Romerquelle <span>0,33&#160;l</span></dt>
+      <dd class="price">35&#160;Kč</dd>
       <dd>(perlivá, neperlivá, lemon grass)</dd>
-      <dt>Romerquelle <span>0,75 l</span></dt>
-      <dd class="price">70 Kč</dd>
+      <dt>Romerquelle <span>0,75&#160;l</span></dt>
+      <dd class="price">70&#160;Kč</dd>
       <dd>(perlivá, neperlivá)</dd>
-      <dt>Ledový čaj Fuzetea <span>0,25 l</span></dt>
-      <dd class="price">40 Kč</dd>
-      <dd>(zelený s mangem a heřmánkem, černý s broskví a ibiškem)</dd>
-      <dt>Karafa s vodou a citronem <span>1 l</span></dt>
-      <dd class="price">65 Kč</dd>
+      <dt>Ledový čaj Fuzetea <span>0,25&#160;l</span></dt>
+      <dd class="price">40&#160;Kč</dd>
+      <dd>(zelený s&#160;mangem a&#160;heřmánkem, černý s&#160;broskví a&#160;ibiškem)</dd>
+      <dt>Karafa s&#160;vodou a&#160;citronem <span>1&#160;l</span></dt>
+      <dd class="price">65&#160;Kč</dd>
     </dl>
 
-    <h id="horke" class="break" title="Horké nápoje, káva a čaj…">Horké nápoje, káva a čaj</h>
+    <h data-id="hot_drinks" id="horke" class="break" title="Horké nápoje, káva a&#160;čaj…">Horké nápoje, káva a&#160;čaj</h>
     <desc>n/a</desc>
     <p class="print"><img src="/files/thumbs/coffee.jpg" alt="Coffee"/></p>
     <dl class="meal meal-oneline">
       <dt>Espresso</dt>
-      <dd class="price">40 Kč</dd>
+      <dd class="price">40&#160;Kč</dd>
       <dt>Espresso lungo</dt>
-      <dd class="price">43 Kč</dd>
-      <dt>Dopio (2× Espresso)</dt>
-      <dd class="price">75 Kč</dd>
+      <dd class="price">43&#160;Kč</dd>
+      <dt>Dopio (2×&#160;Espresso)</dt>
+      <dd class="price">75&#160;Kč</dd>
       <dt>Cappucino</dt>
-      <dd class="price">50 Kč</dd>
+      <dd class="price">50&#160;Kč</dd>
       <dt>Latte macchiatto</dt>
-      <dd class="price">55 Kč</dd>
+      <dd class="price">55&#160;Kč</dd>
       <dt>Vídeňská káva</dt>
-      <dd class="price">45 Kč</dd>
+      <dd class="price">45&#160;Kč</dd>
       <dt>Alžírská káva</dt>
-      <dd class="price">70 Kč</dd>
+      <dd class="price">70&#160;Kč</dd>
       <dt>Turecká káva</dt>
-      <dd class="price">35 Kč</dd>
+      <dd class="price">35&#160;Kč</dd>
       <dt>Ledová káva se zmrzlinou</dt>
-      <dd class="price">70 Kč</dd>
+      <dd class="price">70&#160;Kč</dd>
       <dt>Frappé</dt>
-      <dd class="price">45 Kč</dd>
+      <dd class="price">45&#160;Kč</dd>
       <dt>Sypané čaje </dt>
-      <dd class="price">49 Kč</dd>
-      <dd>(ovocný, černý – Earl Grey, rooibos, zelený)</dd>
+      <dd class="price">49&#160;Kč</dd>
+      <dd>(ovocný, černý&#160;– Earl Grey, rooibos, zelený)</dd>
       <dt>Zázvorový čaj</dt>
-      <dd class="price">60 Kč</dd>
+      <dd class="price">60&#160;Kč</dd>
       <dd>Čerstvý zázvor</dd>
       <dt>Mátový čaj</dt>
-      <dd class="price">60 Kč</dd>
+      <dd class="price">60&#160;Kč</dd>
       <dd>Čerstvá máta</dd>
       <dt>Náš pečený ovocný čaj</dt>
-      <dd class="price">60 Kč</dd>
+      <dd class="price">60&#160;Kč</dd>
       <dd>Směs hruška + jablko + švestka + grep</dd>
     </dl>
 
-    <h id="rumy" class="break">Rumy a pálenky</h>
-    <desc>Rumy a pálenky se podávají v objemu 0,4 cl. Pro více informací o jednotlivých rumech požádejte obsluhu o rumový lístek.</desc>
+    <h data-id="rums" id="rumy" class="break">Rumy a&#160;pálenky</h>
+    <desc>Rumy a&#160;pálenky se podávají v&#160;objemu 0,4&#160;cl. Pro více informací o&#160;jednotlivých rumech požádejte obsluhu o&#160;rumový lístek.</desc>
     <dl class="meal meal-oneline">
       <dt>Diplomático Mantuano</dt>
-      <dd class="price">80 Kč</dd>
+      <dd class="price">80&#160;Kč</dd>
       <dt>Diplomático Reserva Exclusiva</dt>
-      <dd class="price">120 Kč</dd>
+      <dd class="price">120&#160;Kč</dd>
       <dt>Zacapa Centenario 23</dt>
-      <dd class="price">130 Kč</dd>
+      <dd class="price">130&#160;Kč</dd>
       <dt>Millonario Xo</dt>
-      <dd class="price">240 Kč</dd>
-      <dt>Millonario 10 Aniversario Reserva</dt>
-      <dd class="price">120 Kč</dd>
-      <dt>Auténtico Nativo 15 <a var="definition-yo">YO</a></dt>
-      <dd class="price">100 Kč</dd>
+      <dd class="price">240&#160;Kč</dd>
+      <dt>Millonario 10&#160;Aniversario Reserva</dt>
+      <dd class="price">120&#160;Kč</dd>
+      <dt>Auténtico Nativo 15&#160;<a var="definition-yo">YO</a></dt>
+      <dd class="price">100&#160;Kč</dd>
       <dt>Pyrat XO Reserve</dt>
-      <dd class="price">90 Kč</dd>
-      <dt>Angostura 5 <a var="definition-yo">YO</a></dt>
-      <dd class="price">60 Kč</dd>
-      <dt>Angostura 7 <a var="definition-yo">YO</a></dt>
-      <dd class="price">80 Kč</dd>
+      <dd class="price">90&#160;Kč</dd>
+      <dt>Angostura 5&#160;<a var="definition-yo">YO</a></dt>
+      <dd class="price">60&#160;Kč</dd>
+      <dt>Angostura 7&#160;<a var="definition-yo">YO</a></dt>
+      <dd class="price">80&#160;Kč</dd>
       <dt>Kraken Black Spiced</dt>
-      <dd class="price">50 Kč</dd>
-      <dt>Demon´s Share </dt>
-      <dd class="price">100 Kč</dd>      
+      <dd class="price">50&#160;Kč</dd>
+      <dt>Demon´s&#160;Share </dt>
+      <dd class="price">100&#160;Kč</dd>      
       <dt>Don Papa</dt>
-      <dd class="price">100 Kč</dd>
-      <dt>Legendario Elixir 7 <a var="definition-yo">YO</a></dt>
-      <dd class="price">60 Kč</dd>
+      <dd class="price">100&#160;Kč</dd>
+      <dt>Legendario Elixir 7&#160;<a var="definition-yo">YO</a></dt>
+      <dd class="price">60&#160;Kč</dd>
       <dt>Six Saints</dt>
-      <dd class="price">100 Kč</dd>
+      <dd class="price">100&#160;Kč</dd>
       <dt>Fassbind stařená švestka</dt>
-      <dd class="price">130 Kč</dd>
+      <dd class="price">130&#160;Kč</dd>
       <dt>Fassbind stařená malina</dt>
-      <dd class="price">130 Kč</dd>
+      <dd class="price">130&#160;Kč</dd>
       <dt>Fassbind stařená hruška</dt>
-      <dd class="price">130 Kč</dd>
+      <dd class="price">130&#160;Kč</dd>
     </dl>
 
-    <h id="destilaty" class="break" title="Destiláty">Destiláty</h>
-    <desc>Nabízíme obecně známé destiláty, které podáváme v objemu 0,4 cl.</desc>
+    <h data-id="spirits" id="destilaty" class="break" title="Destiláty">Destiláty</h>
+    <desc>Nabízíme obecně známé destiláty, které podáváme v&#160;objemu 0,4&#160;cl.</desc>
     <dl class="meal meal-oneline">
       <dt>Captain Morgan</dt>
-      <dd class="price">50 Kč</dd>
+      <dd class="price">50&#160;Kč</dd>
       <dt>Božkov Tuzemský</dt>
-      <dd class="price">30 Kč</dd>
+      <dd class="price">30&#160;Kč</dd>
       <dt>Vodka Finlandia</dt>
-      <dd class="price">40 Kč</dd>
+      <dd class="price">40&#160;Kč</dd>
       <dt>Ruský standard</dt>
-      <dd class="price">45 Kč</dd>
+      <dd class="price">45&#160;Kč</dd>
       <dt>Slivovice</dt>
-      <dd class="price">50 Kč</dd>
+      <dd class="price">50&#160;Kč</dd>
       <dt>Tanquearay Gin</dt>
-      <dd class="price">60 Kč</dd>
+      <dd class="price">60&#160;Kč</dd>
       <dt>Bulldog Gin</dt>
-      <dd class="price">60 Kč</dd>
-      <dt>Broker´s pink Gin</dt>
-      <dd class="price">60 Kč</dd>
+      <dd class="price">60&#160;Kč</dd>
+      <dt>Broker´s&#160;pink Gin</dt>
+      <dd class="price">60&#160;Kč</dd>
       <dt>Fernet / Fernet Citrus</dt>
-      <dd class="price">35 Kč</dd>
+      <dd class="price">35&#160;Kč</dd>
       <dt>Becherovka</dt>
-      <dd class="price">35 Kč</dd>
+      <dd class="price">35&#160;Kč</dd>
       <dt>Jägermeister</dt>
-      <dd class="price">50 Kč</dd>
+      <dd class="price">50&#160;Kč</dd>
       <dt>Vaječný likér</dt>
-      <dd class="price">30 Kč</dd>
+      <dd class="price">30&#160;Kč</dd>
       <dt>Tullamore Dew</dt>
-      <dd class="price">60 Kč</dd>
-      <dt>Jack Daniel's Honey</dt>
-      <dd class="price">60 Kč</dd>
+      <dd class="price">60&#160;Kč</dd>
+      <dt>Jack Daniel's&#160;Honey</dt>
+      <dd class="price">60&#160;Kč</dd>
       <dt>Metaxa *******</dt>
-      <dd class="price">60 Kč</dd>
+      <dd class="price">60&#160;Kč</dd>
     </dl>
   </section>
 </body>
