--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<body xml:lang="cs" ns="https://www.steakgrill.cz">
+<body xml:lang="cs" ns="https://www.steakgrill.cz" class="contenttoc">
   <h data-id="regular_menu" id="stala_nabidka" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/regular_menu" data-class="tocable">Stálá nabídka jídel</h>
   <desc>Nabízíme populární jídla mezinárodní kuchyně. Mimo steaků a&#160;burgerů si přijdou na své i&#160;milovníci salátů a&#160;netradičních polévek, pro které je náš podnik také vyhlášený.</desc>
-  <section class="contenttoc">
+  <section>
     <h data-id="soups" id="polevky">Polévky</h>
     <desc>Po celý den připravujeme čtyři druhy polévek. Polévky jsou dle vlastní Mikeovy receptury. Takové jinde neochutnáte!</desc>
     <ul class="photoswipe">
