--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<body xml:lang="cs" ns="https://www.steakgrill.cz" class="tocable">
-  <h data-id="regular_menu" id="stala_nabidka" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/regular_menu" data-class="tocable">Stálá nabídka jídel</h>
+<body xml:lang="cs" ns="https://www.steakgrill.cz">
+  <h data-id="regular_menu" id="stala_nabidka" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/regular_menu">Stálá nabídka jídel</h>
   <desc>Nabízíme populární jídla mezinárodní kuchyně. Mimo steaků a&#160;burgerů si přijdou na své i&#160;milovníci salátů a&#160;netradičních polévek, pro které je náš podnik také vyhlášený.</desc>
   <section>
     <h data-id="soups" id="polevky">Polévky</h>
