--- a/plugins/InputVar/InputVar.html
+++ b/plugins/InputVar/InputVar.html
@@ -4,29 +4,29 @@
   <desc kw="administrace, InputVar">Při úpravě textů dbejte na <a href="https://cs.wikipedia.org/wiki/Wikipedie:Typografick%C3%A9_rady" title="Wikipedie: Typografické rady">obecná pravidla typografie</a>, zejména pak na výčet typických nedostatků (níže). Před uložením si texty po sobě přečtěte s&#160;odstupem aspoň několika minut. Po uložení si texty projděte znovu, ideálně požádejte kolegu. Pro skrytí jídla nechte pole prázdné.</desc>
   <dl class="nomultiple hideable hideable-hidden">
     <dt>Terminologie a&#160;pravopis</dt>
-    <dd>Minimalizujte používání cizích termínů a&#160;žargonu! V·opačném případě se ujistěte, že neexistuje vhodný překlad (např. <samp>vývar</samp> a&#160;nikoli <del><samp>browth</samp></del>). Čeští čtenáři preferují srozumitelnou (spisovnou) češtinu.</dd>
-    <dd>Cizí termíny vždy patřičně vysvětlete, přeložte či opište. Můžete použít interaktivní slovník pojmů, např. <a var="definition-sous-vide">sous-vide</a>.</dd>
+    <dd>Minimalizujte používání cizích termínů a&#160;žargonu! V&#160;opačném případě se ujistěte, že neexistuje vhodný překlad (např. <samp>vývar</samp> a&#160;nikoli <del><samp>browth</samp></del>). Čeští čtenáři preferují srozumitelnou (spisovnou) češtinu.</dd>
+    <dd>Cizí termíny vždy patřičně vysvětlete, přeložte či opište. Můžete použít interaktivní definice, např. <a var="definition-sous-vide">sous-vide</a>.</dd>
     <dd>Pozor na správné použití cizích termínů (např. <samp>au jus</samp> a&#160;nikoli <del><samp>Jus</samp></del>).</dd>
-    <dd>K&#160;ověření pravopisu můžete použít <a href="http://prirucka.ujc.cas.cz/" title="Internetová jazyková příručka">internetovou příručku</a> či internet obecně. Základní kontrola pravopisu je i·v·prohlížeči. Ujistěte se, že je zapnutá.</dd>
+    <dd>K&#160;ověření pravopisu můžete použít <a href="http://prirucka.ujc.cas.cz/" title="Internetová jazyková příručka">internetovou příručku</a> či internet obecně. Základní kontrola pravopisu je i&#160;v&#160;prohlížeči. Ujistěte se, že je zapnutá (že podtrhává překlepy).</dd>
   </dl>
   <dl class="nomultiple hideable hideable-hidden">
     <dt>Konzistence</dt>
-    <dd>Začínejte každou informaci (každý řádek v&#160;poli administrace) a·každou větu velkým písmenem. Nezačínejte číslem, pokud to je možné. Jinak číslo přepište slovně (např. <samp>Tři vejce do skla</samp> a·nikoli <del><samp>3·vejce do skla</samp></del>).</dd>
-    <dd>Pokud si nejste jistí, jak napsat např. cenu nebo rozmezí cen, zkopírujte text např. ze stálé nabídky nebo z·předchozího údaje a&#160;upravte ho.</dd>
-    <dd>Za každou větou (a·tedy i·za popisem jídla) musí být tečka. Každá věta by měla obsahovat podmět a&#160;přísudek (nikoli jakože pokračování nadpisu).</dd>
-    <dd>Vkládejte text vždy se zachováním standardní velikosti písmen. Slova psaná velkými písmeny se špatně čtou a·chybně interpretují (např. <samp>VYPIL DO DNA</samp> může čtečka přečíst jako <em>„vypil do dé-en-á“</em>).</dd>
+    <dd>Začínejte každou informaci (každý řádek v&#160;poli administrace) a&#160;každou větu velkým písmenem. Nezačínejte číslem, pokud to je možné. Jinak číslo přepište slovně (např. <samp>Tři vejce do skla</samp> a&#160;nikoli <del><samp>3&#160;vejce do skla</samp></del>).</dd>
+    <dd>Pokud si nejste jistí, jak napsat např. cenu nebo rozmezí cen, zkopírujte text např. ze stálé nabídky nebo z&#160;předchozího údaje a&#160;upravte ho.</dd>
+    <dd>Za každou větou (a&#160;tedy i&#160;za popisem jídla) musí být tečka. Každá věta by měla obsahovat podmět a&#160;přísudek (nikoli jakože pokračování nadpisu).</dd>
+    <dd>Vkládejte text vždy se zachováním standardní velikosti písmen. Slova psaná velkými písmeny se špatně čtou a&#160;chybně interpretují (např. <samp>VYPÍT DO DNA</samp> může čtečka přečíst jako <em>„vypít do dé-en-á“</em>).</dd>
     <dd>Ikony do tlačítka s akcí vybírejte výhradně z galerie <a href="https://fontawesome.com/icons?d=gallery">Font Awesome</a>, typ <samp>fas</samp> nebo <samp>far</samp>.</dd>
   </dl>
   <dl class="nomultiple hideable hideable-hidden">
     <dt>Typografie</dt>
     <dd>V&#160;anglických nadpisech patří velká písmena na začátek jednotlivých slov (např. <samp>Scotch Broth</samp>, <samp>Pepper Steak</samp>). V&#160;českých nadpisech jen na začátek (např. <samp>Hovězí vývar</samp>, <samp>Tatarský steak</samp>).</dd>
     <dd>Rozlišujte pomlčku (<samp>–</samp>) a&#160;rozdělovník (<samp>-</samp>). Pokud pomlčka rozděluje pouze dvě slova, nepatří kolem ní mezery (<samp>1.–2.&#160;května</samp>). V&#160;opačném případě kolem pomlčky mezery patří (<samp>30.&#160;dubna&#160;– 1.&#160;května</samp>).</dd>
-    <dd>Rozlišujte <samp>„české“</samp> a&#160;<samp>“anglické”</samp> uvozovky a·znak pro palec (<samp>"</samp>).</dd>
+    <dd>Rozlišujte <samp>„české“</samp> a&#160;<samp>“anglické”</samp> uvozovky a&#160;znak pro palec (<samp>"</samp>).</dd>
     <dd>Apostrof a&#160;čárka jsou rozdílné znaky, tedy např. <samp>Fisherman's&#160;Chowder</samp> a&#160;nikoli <del><samp>Fisherman´s&#160;Chowder</samp></del> či <del><samp>Fisherman`s&#160;Chowder</samp></del>.</dd>
-    <dd>Mezi číslo a&#160;jednotku patří mezera, pokud se jedná o&#160;dvě slova (např. <samp>100&#160;g = sto gramů</samp>, kdežto <samp>100g = stogramový</samp>). Totéž platí např. pro procenta a&#160;další znaky.</dd>
+    <dd>Mezi číslo a&#160;jednotku patří mezera, pokud se jedná o&#160;dvě slova (např. <samp>100&#160;g = sto gramů</samp>, kdežto <samp>100g = stogramový</samp>). Totéž platí např. pro procenta a&#160;další jednotky.</dd>
     <dd>Na velikosti písmen záleží; zejména také u&#160;jednotek (např. <samp>g = gram</samp>, <samp>G = giga</samp>).</dd>
-    <dd>Za interpunkční znaménka (jako je tečka, čárka atp.) patří mezera, až na výjimky jako např. konec závorky v&#160;této větě.</dd>
-    <dd>Mezi některá slova patří <a var="definition-nbsp">pevná mezera</a> (<samp>&#160;</samp>). Jedná se o&#160;veškerá <a var="definition-zalomeni-radku">slova nevhodná na konec řádku</a> (jako např. jednopísmenné předložky) bez ohledu na jejich umístění v&#160;textu, neboť při tisku či na jiném zařízení se mohou vyskytnout na konci řádku.</dd>
+    <dd>Za interpunkční znaménka (jako je tečka, čárka atp.) patří mezera, až na výjimky jako např. tečka před koncem závorky v&#160;této větě.</dd>
+    <dd>Mezi některá slova patří <a var="definition-nbsp">pevná mezera</a> (<samp>&#160;</samp>). Jedná se o&#160;veškerá <a var="definition-zalomeni-radku">slova nevhodná na konec řádku</a> (jako např. jednopísmenné předložky), a to bez ohledu na jejich umístění v&#160;textu. Na různých zařízeních se mohou na konc řádku dostat vzhledem k&#160;různé velikosti obrazovek a písma.</dd>
   </dl>
  
   <form class="editable fillable validable validateform-10 eventable-noevent" id="inputvarform" action="/" method="post" var="action@action">
