--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -3,7 +3,7 @@
   <h data-id="regular_menu" id="stala_nabidka" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/regular_menu">Stálá nabídka jídel</h>
   <desc>Nabízíme populární jídla mezinárodní kuchyně. Mimo steaků a&#160;burgerů si přijdou na své i&#160;milovníci salátů a&#160;netradičních polévek, pro které je náš podnik také vyhlášený.</desc>
   <ol class="contenttoc button-list">
-    <li class="tocable">seznam položek není k dispozici</li>
+    <li class="tocable" data-item-class="button button--shadow">seznam položek není k dispozici</li>
   </ol>
   <section>
     <h data-id="soups" id="polevky">Polévky</h>
