--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -2,7 +2,10 @@
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
   <h data-id="beverages" id="napojovy_listek" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/beverages">Nápojový lístek</h>
   <desc>Naše domácí limonády z&#160;čerstvého ovoce Vás osvěží za horkého dne a&#160;náš připravovaný pečený čaj zahřeje v&#160;sychravém počasí. Pivařům čepujeme Staropramen s&#160;nabídkou piv z&#160;malých pivovarů a&#160;nezaostáváme v&#160;širší nabídce kvalitních rumů.</desc>
-  <section class="contenttoc">
+  <ol class="contenttoc button-list">
+    <li class="tocable"><a class="button button--shadow">seznam položek není k dispozici</a></li>
+  </ol>
+  <section>
     <h data-id="alcoholic" id="alkoholicke" title="Alkoholické nápoje, pivo…">Alkoholické nápoje, pivo</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
