--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -2,7 +2,10 @@
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
   <h data-id="wine_list" id="vinny_listek" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/wine_list">Vinný lístek</h>
   <desc>Vinný lístek sestavuje přední český specialista přímo na míru naší restauraci. Hlavním kritériem volby je vedle nabídky jídel také přijatelná cena. Vína nabízíme francouzská, italská a&#160;česká.</desc>
-  <section class="contenttoc">
+  <ol class="contenttoc button-list">
+    <li class="tocable"><a class="button button--shadow">seznam položek není k dispozici</a></li>
+  </ol>
+  <section>
     <h data-id="sparkling_wines_and_prosecco" id="sekty" title="Sekty a&#160;Prosecco…">Sekty a&#160;Prosecco</h>
     <desc>n/a</desc>
     <dl class="meal">
